# gecko-vpp-rebuild

./: .env.example  .gitignore  ARCHITECTURE.md  BRIEF_V05_AMENDMENT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  PRODUCT_BRIEF.md  PROGRESS.md  README.md  SESSION_REPORT_2026-05-23-night.md  difficulties_log.md  docker-compose.prod.yml  docker-compose.yml  package.json
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_init_schemas.py  002_roles_and_grants.py  003_core_tables.py  004_market_tables.py  005_dispatch_tables.py  006_ems_tables.py  007_regulatory_tables.py  008_agents_tables.py  009_audit_tables.py  010_rls_policies.py  011_indexes_and_grants.py  012_seed_core_lookups.py
apps/api/src/gecko_vpp/: __init__.py  config.py  db.py  deps.py  main.py
apps/api/src/gecko_vpp/agents_engine/: __init__.py  _common.py  classifier.py  fallback.py  (+3 more)
apps/api/tests/: conftest.py  test_agents_engine.py  test_rls.py  test_routers_assets.py  test_routers_dispatch.py  test_routers_ems.py  test_routers_market.py
data-generator/: README.md  pyproject.toml
data-generator/data_generator/: __init__.py  config.py  coverage.py  db.py  main.py  rng.py
data-generator/data_generator/shapes/: __init__.py  agent_query_log.py  ancillary.py  assets.py  bids.py  br_settlements.py  dd_contracts.py  forecast_submissions.py  forecasts.py  instructions.py  kpi_daily.py  optimisations.py  rdn_prices.py  regulator_events.py  setpoints.py  settlements.py  signed_documents.py  telemetry.py  users.py  vdr_trades.py
(+164 files in other folders)
