[project]
name = "gecko-data-generator"
version = "0.1.0"
description = "GECKO VPP — synthetic UA energy data generator (Stage 4c)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "numpy>=1.26,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_generator*"]
